# mssplunkai

./: .gitignore  README.md  package-lock.json
Certopsaidashboarddesign/: README.md  index.html  package-lock.json  package.json
Certopsaidashboarddesign/src/app/: App.tsx  routes.tsx
Certopsaidashboarddesign/src/services/: api.ts
agentic-process/agentic-process/: Process.bpmn  agentic-process.bpmn  entry-points.json  operate.json  package-descriptor.json  project.uiproj
agents/: .gitignore
agents/assessment-agent/: agent.json  agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/coaching-agent/: agent.json  agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/learning-agent/: .gitignore  README.md  agent.mermaid  entry-points.json  input.sample.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/learning-agent/evaluations/eval-sets/: evaluation-set-default.json
agents/planner-agent/: agent.json  agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
agents/risk-agent/: agent.json  agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
backend/: .env.example  PERSISTENCE_API.md  README.md  package-lock.json  package.json
backend/.uipath/: .auth.json  .error_log
backend/src/: server.js
backend/src/agents/: assessmentAgent.js  insightsAgent.js  learningAgent.js  plannerAgent.js
database/: agent_seed.sql  agent_tables.sql  base_tables.sql  case_view.sql  diagnostics.sql  setup.sql
(+22 files in other folders)
