[project]
name = "certflow-learning-agent"
version = "0.1.0"
description = "UiPath coded Python agent that generates certification learning paths for CertFlow."
authors = [{ name = "CertFlow Team" }]
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "uipath>=2.0",
  "uipath-langchain>=0.9.26",
]

[dependency-groups]
dev = [
  "uipath-dev",
]
